--- a/src/main/resources/hibernatePROP.properties
+++ b/src/main/resources/hibernatePROP.properties
@@ -4,4 +4,4 @@ connection.url=jdbc:mysql://localhost:3306/db_trashsorter
 username=root
 password=root
 show_sql=true
-hbm2ddl.auto=create
+hbm2ddl.auto=none
