--- a/src/main/resources/qrPROP.properties
+++ b/src/main/resources/qrPROP.properties
@@ -1,5 +1,5 @@
-linkRequest = http://api.qrserver.com/v1/create-qr-code/?data=[
-preSizeRequest_1 = ]&size=[
+linkRequest = http://api.qrserver.com/v1/create-qr-code/?data=
+preSizeRequest_1 = &size=[
 preSizeRequest_2 = ]x[
 endRequest = ]
 serverPath = http://localhost:8080
