--- a/src/main/resources/qrPROP.properties
+++ b/src/main/resources/qrPROP.properties
@@ -2,4 +2,4 @@ linkRequest = http://api.qrserver.com/v1/create-qr-code/?data=
 preSizeRequest_1 = &size=[
 preSizeRequest_2 = ]x[
 endRequest = ]
-serverPath = http://localhost:8080
+serverPath = http://192.168.1.35:8080
