--- a/src/main/resources/hibernatePROP.properties
+++ b/src/main/resources/hibernatePROP.properties
@@ -1,7 +1,7 @@
 dialect=org.hibernate.dialect.MySQLDialect
 driver.class=com.mysql.jdbc.Driver
-connection.url=jdbc:mysql://localhost:3306/db_trashsorter
+connection.url=jdbc:mysql://localhost:3306/db_trashsorter?characterEncoding=UTF-8&useUnicode=true&useSSL=false
 username=root
 password=root
 show_sql=true
-hbm2ddl.auto=none
+hbm2ddl.auto=create
